Blender 2.8 crashes when enabling collection on legacy .blend file. #56593

Closed
opened 2018-08-28 13:58:10 +02:00 by Lewis Toohey · 3 comments

System Information
Windows 10
Nvidia GeForce GTX Titan X

Blender Version
2.80 Alpha 2 - b61ab69025

Description
Blender crashes when enabling collection in viewport.

Exact steps for others to reproduce the error
Open the attached .blend file (created in a previous version of Blender)
In the Outliner, click the "Disable collection in viewport" button against Collection 2 (actually intending to enable the collection, but disable is the tooltip).
Blender crashes instantly.
The following error can be seen in the console:
Error : EXCEPTION_ACCESS_VIOLATION
Address : 0x00007FF790715DFE
Module : C:\Users\lewis\Dropbox\Downloads\blender-2.80-b61ab69025a-win64\blender-2.80.0-git.b61ab69025a-windows64\blender.exe

Mice(SPTexture2).blend

**System Information** Windows 10 Nvidia GeForce GTX Titan X **Blender Version** 2.80 Alpha 2 - b61ab69025a **Description** Blender crashes when enabling collection in viewport. **Exact steps for others to reproduce the error** Open the attached .blend file (created in a previous version of Blender) In the Outliner, click the "Disable collection in viewport" button against Collection 2 (actually intending to **enable** the collection, but disable is the tooltip). Blender crashes instantly. The following error can be seen in the console: Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00007FF790715DFE Module : C:\Users\lewis\Dropbox\Downloads\blender-2.80-b61ab69025a-win64\blender-2.80.0-git.b61ab69025a-windows64\blender.exe [Mice(SPTexture2).blend](https://archive.blender.org/developer/F4424832/Mice_SPTexture2_.blend)
Author

Added subscriber: @lewis2e

Added subscriber: @lewis2e

This issue was referenced by 2580399498

This issue was referenced by 25803994986f6825842b17446f890f6f70348f06

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56593
No description provided.