Fix T56593: Crash when enabling collection with curves

Was missing update of ID blocks which are becoming visible.