source/blender/depsgraph/intern/nodes/deg_node_id.h
@@ -81,6 +81,13 @@ struct IDDepsNode : public DepsNode {
 	 * the dependency graph.
 	 */
 	bool is_visible;
+	/* Is used to detect when ID becomes visible within a dependency graph,
+	 * this value equals to:
+	 *   - False if the ID was never inside of the dependency graph.
+	 *   - Value if is_visible of ID node from the previous state of the
+	 *     dependency graph.
+	 */
+	bool is_previous_visible;
 
 	DEG_DEPSNODE_DECLARE;
 };
